--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "^7.1.0",
     "@capacitor/app": "7.0.0",
-    "@capacitor/core": "7.1.0",
+    "@capacitor/core": "^7.1.0",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "firebase": "^11.4.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "7.1.0",
+    "@capacitor/cli": "^7.1.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -33,6 +35,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "sass": "^1.86.0",
     "terser": "^5.4.0",
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
