--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "axios": "^1.8.3",
     "firebase": "^11.4.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
