--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "ionic build --prod",
+    "build": "npx ionic build --prod",
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
