--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npx ionic build --prod",
+    "ionic:build": "npx ionic build --prod",
     "preview": "vite preview",
     "test:e2e": "cypress run",
     "test:unit": "vitest",
